--- a/employee/html/emverifyemail.html
+++ b/employee/html/emverifyemail.html
@@ -55,7 +55,7 @@ h2{
 	<br>
 	<br>
 	<br>
-	<a>haven recipt verify code ?</a><a href="@" class="forget" style="color: red;">Send Again</a>
+	<a>haven receive verify code ?</a><a href="@" class="forget" style="color: red;">Send Again</a>
 	
 	
   </div>
