--- a/employee/html/efirstlogin.html
+++ b/employee/html/efirstlogin.html
@@ -71,7 +71,7 @@ function check(){
 	<br>
 	<br>
 	<br>
-	<a>haven recipt verify code ?</a><a href="@" class="forget" style="color: red;">Send Again</a>
+	<a>haven receive verify code ?</a><a href="@" class="forget" style="color: red;">Send Again</a>
 	
 	
   </div>
