--- a/customer/html/cverifyemail.html
+++ b/customer/html/cverifyemail.html
@@ -130,7 +130,7 @@ function mouseinl(){
 		<div id="inner">		
 			<div id="verify">
 				<center><form action="/projectv2/customer/php/csverifyemail.php" method="post">
-				<h2>Customer Account Active</h2>		
+				<h2>Customer Account Activation</h2>		
 				<p><input type="text" name="tempcode" id="tempcode" size="15" placeholder="verify code"/></p>		
 				<input type='submit' name='submit' id="submit" value='Send' >
 				</form></center>
