added change email option
future plan

--- a/customer/html/cverifyemail.html
+++ b/customer/html/cverifyemail.html
@@ -140,6 +140,8 @@ function mouseinl(){
 				<br>
 				<br>
 				<a>沒收到激活碼 ?</a><a href="/projectv2/customer/php/csendtcagain.php" class="forget" style="color: red;"> 重發</a>
+				/
+				<a href="@" class="forget" style="color: red;">更換</a>
 			</div>
 			
 		</div>							
